--- a/MangaMu/MangaMu.csproj
+++ b/MangaMu/MangaMu.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -11,7 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Utilities\" />
+    <Folder Include="Views\Partials\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MangaMu.Plugins\MangaMu.Plugin.csproj" />
   </ItemGroup>
 
 </Project>
