--- a/MangaMu/MangaMu.csproj
+++ b/MangaMu/MangaMu.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\MangaMu.Plugins\MangaMu.Plugin.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Plugins\deleteme.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
